# sszpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.cmake_modules/: FindHashtree.cmake
cmake/: sszppConfig.cmake.in
lib/: attestation.hpp  basic_types.hpp  beacon_block.hpp  beacon_state.hpp  beaconchain.hpp  bitlists.hpp  bytelists.hpp  checkpoint.hpp  concepts.hpp  container.hpp  deposit.hpp  execution_payload.hpp  exits.hpp  fork.hpp  historical_summary.hpp  lists.hpp  math.hpp  merkleize.cpp  merkleize.hpp  ssz++.hpp  sync_committee.hpp  validator.hpp  withdrawals.hpp
testing/: bench_beacon_state.cpp  concepts_test.cpp  serialize_test.cpp  spec_test.cpp
